# colobot-level-i18n-infra

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  gen_levels_xml.sh
levels/: scene101.txt  scene102.txt  scene103.txt
po/: fr.po  level.pot
scripts/: 01_create_po4a_file.sh  01_extract_strings_to_xml.sh  02_create_common_xhtml_file.sh  02_run_po4a.sh  03_create_po4a_file.sh  03_inject_translations.sh  05_inject_translations.sh  gen_levels_xml.sh
scripts/perllib/Locale/Po4a/: Colobothelp.pm  Colobotlevel.pm
